[project]
name = "lighting-designer"
version = "0.1.0"
description = "Professional lighting design calculator with a full Hebrew interface"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Joe Tavin", email = "jtavin@gmail.com" },
]
classifiers = [
    "Natural Language :: Hebrew",
    "Topic :: Scientific/Engineering",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "pyside6>=6.10.2",
    "qtwidgets>=1.1",
]

[project.scripts]
ldesign = "lighting_designer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lighting_designer"]
